src/test/ui/derives/derives-span-Clone-enum-struct-variant.stderr
error[E0277]: the trait bound `Error: std::clone::Clone` is not satisfied
  --> $DIR/derives-span-Clone-enum-struct-variant.rs:9:6
   |
LL |      x: Error
   |      ^^^^^^^^ the trait `std::clone::Clone` is not implemented for `Error`
   |
   = note: required by `std::clone::Clone::clone`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
